objects/Sales_Rep__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(User__r.IsActive = FALSE,  Community_User__r.IsActive, User__r.IsActive)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Schedule__c</fullName>
        <label>Commission Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule 1</fullName>
                </value>
                <value>
                    <fullName>Schedule 2</fullName>
                </value>
                <value>
                    <fullName>Schedule 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field after the conversion to Communities 7/2020.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Reps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>E-Mail</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <label>Other Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep_Profile_ID__c</fullName>
        <formula>User__r.ProfileId</formula>
        <label>Sales Rep Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_SalesRep__c</fullName>
        <formula>IF(ISBLANK(Community_User__c),User__r.Title,Community_User__r.Title)</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not used after conversion to communites on 7/2020</description>
        <inlineHelpText>Should be the same name as Sales Rep</inlineHelpText>
        <label>Old LEX User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>KALT</label>
    </listViews>
    <listViews>
        <fullName>AllReps</fullName>
        <columns>NAME</columns>
        <columns>E_Mail__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Title_SalesRep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Sales_Reps</fullName>
        <columns>NAME</columns>
        <columns>E_Mail__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Title_SalesRep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Sales Reps</label>
    </listViews>
    <listViews>
        <fullName>IC</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Name__c</field>
            <operation>contains</operation>
            <value>Bookkeeper,Preparer</value>
        </filters>
        <label>IC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Rep&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cant_have_a_blank_user</fullName>
        <active>false</active>
        <description>Fail if user is Blank</description>
        <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
        <errorMessage>Cannot save the record until the User field is assigned.</errorMessage>
    </validationRules>
</CustomObject>